# elementary-math-chatbot

./: .gitignore  config.py  pyproject.toml  setup_and_run.sh
.github/: copilot-instructions.md
backend/: inference.py  main.py  schemas.py
csv_dashboard/: README.md  run_web.ps1  setup_and_run.sh
csv_dashboard/backend/: analytics.py  config.py  csv_store.py  importer.py  main.py  schemas.py
csv_dashboard/frontend/: app.py  index.html  package-lock.json  package.json
csv_dashboard/frontend/src/: App.tsx  styles.css
csv_dashboard/frontend/src/api/: client.ts
csv_dashboard/frontend/src/components/: DataQualityCharts.tsx  DatasetOverviewCharts.tsx  ImagePreview.tsx  Layout.tsx  RecordDetail.tsx  RecordForm.tsx  RecordsTable.tsx
evaluation/: metrics.py
frontend/: app.py
models/m1_lstm/: train.ipynb  train.py  vocab.json
models/m1_lstm/final/: hyperparams.json  vocab.json
models/m2_transformer/: predict.ipynb  train.ipynb  train.py  vocab.json
models/m3_gemma/: adapter_config.json  inference.py  m3-eval.ipynb  m3-gemma4-e2b-it.ipynb  tokenizer_config.json  train.py
models/m4_qwen/: README.md  adapter_config.json  inference.py  m4-qwen25-math-1b5-it.ipynb  train.py
old_project/: README.md  crawl_math_pipeline.py  links.txt  sgk_links.txt  system_instructions.md
pipeline/: gemini_vision.py  image_router.py  ocr.py
scripts/: augment_questions.py  data_qa_level1.py  data_qa_level2.py  data_stats.py
